<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">彗星</string>
    <string name="hello_world">Test</string>

    <!-- **********************Base*********************** -->
    <!--permission-->
    <string name="permission_recode_audio_hint">亲，您还没有授权录音权限</string>
    <string name="permission_get_accounts_hint">亲，您还没有授权通讯录权限</string>
    <string name="permission_read_phone_hint">亲，您还没有授权管理通话权限</string>
    <string name="permission_call_phone_hint">亲，您还没有授权拨打电话权限</string>
    <string name="permission_camera_hint">亲，您还没有授权相机权限</string>
    <string name="permission_access_fine_location_hint">亲，您还没有授权定位权限</string>
    <string name="permission_access_coarse_location_hint">亲，您还没有授权定位权限</string>
    <string name="permission_read_external_hint">亲，您还没有授权存储权限</string>
    <string name="permission_white_external_hint">亲，您还没有授权存储权限</string>

    <!-- **********************异常提示模块*********************** -->
    <string name="http_request_success">操作成功</string>
    <string name="exception_cancel_code">-20000</string>
    <string name="exception_cancel_message">操作已取消！</string>
    <string name="exception_net_work_io_code">-20001</string>
    <string name="exception_net_work_io_message">网络不可用，请检查您的网络！</string>
    <string name="exception_net_work_time_out_code">-20002</string>
    <string name="exception_net_work_time_out_message">等待响应超时！</string>
    <string name="exception_net_work_json_code">-20003</string>
    <string name="exception_net_work_json_message">网络数据解析错误！</string>
    <string name="exception_local_json_code">-20004</string>
    <string name="exception_local_json_message">本地转换数据异常！</string>
    <string name="exception_local_other_code">-20005</string>
    <string name="exception_local_other_message">网络异常，请稍后重试！</string>
    <string name="activity_token_error">登录过期，请重新登录</string>
    <!-- ******************Base****************** -->
    <string name="years">年</string>
    <string name="moths">月</string>
    <string name="days">日</string>
    <string name="hours">时</string>
    <string name="mins">分</string>
    <string name="min">min</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="minute">分钟前</string>
    <string name="second">秒前</string>

    <!-- ******************提示****************** -->
    <string name="tips_app_will_restart">程序出现未知错误，即将重启</string>
    <string name="tips_app_will_exit">程序出现未知错误，即将退出</string>
    <string name="tips_exit_time">再按一次返回键退出程序</string>
    <!--<string name="process_download_wait">正在下载&#8230;</string>-->
    <string name="process_handle_wait">正在加载</string>

    <!-- *******************************上下拉刷新提示文本**************************** -->

    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">释放更新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_up_refresh_pull_label">上拉加载&#8230;</string>
    <string name="pull_up_refresh_release_label">释放加载&#8230;</string>
    <string name="pull_up_refresh_refreshing_label">加载中&#8230;</string>
    <string name="wait">请稍后&#8230;</string>
    <string name="no_more_data">已全部加载</string>
    <string name="no_data">当前暂无数据</string>

    <!-- *******************************viewtitle文本**************************** -->
    <string name="back">返回</string>
    <string name="enter">确定</string>

    <!-- *******************************分享*************************** -->
    <string name="share">分享</string>
    <string name="share_wait">分享组件正在启动，请您稍候&#8230;</string>
    <string name="share_start">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享已取消</string>
    <string name="share_wechat">微信</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_validation">验证中&#8230;</string>
    <string name="share_of">分享中&#8230;</string>
    <string name="share_wechatmoments">微信朋友圈</string>

    <!-- 二维码扫描 -->
    <string name="activity_scan_code">二维码扫描</string>
    <string name="scan_text_tips">对准二维码，即可扫描。</string>
    <string name="scan_addtips_text_tips">扫一扫二维码，加我为好友</string>
    <string name="scan_failed_tips">查找失败</string>
    <!--<string name="more">更多</string>-->
    <string name="activity_image_browse">图片浏览器</string>
    <!-- **********************BaseEnd*********************** -->


    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="uncomplete">未完成</string>
    <string name="know">知道了</string>
    <string name="submit">提交</string>
    <string name="prompt">温馨提示</string>
    <string name="hint_select_oper">请选择操作</string>
    <string name="string_setting_net">设置网络</string>
    <string name="string_no_internet">网络未连接，点击重试</string>
    <string name="string_no_data">没有数据</string>
    <string name="string_query_fail">网络异常，点击重试</string>

    <!--app更新service-->
    <string name="service_update_hint_download_finish">下载完成</string>
    <string name="service_update_hint_download_error">下载失败</string>
    <string name="service_update_hint_download_start">正在下载</string>
    <string name="service_update_hint_download_progress">下载进度：%1$d</string>
    <string name="service_update_hint_download_install">点击安装&#8230;</string>
    <string name="service_update_hint_download_error_check">请检查您的网络状态后重试！</string>


    <!--注册-->
    <string name="register">注册</string>
    <string name="input_num">输入手机号</string>
    <string name="input_name">输入用户名</string>
    <string name="pwd_setting">设置密码（6-16）</string>
    <string name="input_new_pwd">请输入新密码（6-16）</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>

    <string name="empty_number">手机号不能为空！</string>
    <string name="vercode_number">验证码不能为空！</string>
    <string name="password_length">请输入6-16位的密码！</string>
    <string name="register_new_user">注册新用户</string>
    <string name="empty_new_pwd">新密码不能为空！</string>
    <string name="name_length"></string>


    <string name="text_id_card_digits">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="please_input_password">请输入密码</string>
    <string name="go_register">去注册</string>
    <string name="empty_pwd">密码不能为空！</string>
    <string name="forget_pwd">忘记密码？</string>


    <!--首页-->
    <string name="dynamic">动态</string>
    <string name="care">关注</string>
    <string name="recomend">推荐</string>

    <string name="add_care">+ 关注</string>
    <string name="already_care">已关注</string>

    <string name="alertdialog_positive_button">确定</string>
    <string name="alertdialog_negative_button">取消</string>

    <!--我的界面-->
    <string name="my_wallet">我的钱包</string>
    <string name="wallet">钱包</string>
    <string name="invite">邀请好友</string>
    <string name="game_rule">游戏规则</string>
    <string name="sign">签到</string>

    <string name="get_coin">提币</string>
    <string name="what_bitian">什么是币天？</string>
    
    <string name="exchange_record">账单明细</string>
    <string name="get_money_code">收款码</string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="personal_info">个人资料</string>
    <string name="account_set">账号设置</string>
    <string name="about_huixing">关于彗星</string>
    <string name="current_version">当前版本</string>
    <string name="clean_cache">清除缓存</string>
    <string name="self_intro">个人简介</string>
    <string name="modify_pwd">修改密码</string>
    <string name="bind_number">绑定的手机号为：</string>
    <string name="change">修改</string>
    <string name="store">保存</string>
    <string name="clear_cache_success">缓存清除成功！</string>
    <string name="input_nick_name">请输入昵称</string>

    <string name="exit">安全退出</string>

    <!--消息-->
    <string name="thumb_up">获赞</string>
    <string name="comment">评论或@</string>
    <string name="notice">社区公告</string>
    <string name="reward_notice">奖励通知</string>
    <string name="new_foucs">新关注</string>
    <string name="message">消息</string>
    <string name="response">回复</string>
    <string name="about">关于我们</string>

    <!--activity_article_detail.xml-->
    <string name="activity_article_detail">本文版权归 %1$s 所有，任何形式转载请联系作者。</string>

    <!---->
    <string name="like_article">喜欢了你的文章</string>
    <string name="comment_article">评论了你的文章</string>

    <string name="developing">程序员小哥哥正在努力开发中，敬请期待！</string>
</resources>