<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/view_group_parent"
    android:background="@color/bg_default"
    android:orientation="vertical">

    <com.android.base.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/distance_10"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cur_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center_vertical"
            android:minHeight="@dimen/distance_50"
            android:text="@string/bind_number"
            android:textSize="@dimen/font_size_normal" />

        <View
            style="@style/line_horizontal_gray_light_style"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/distance_50"
            android:layout_below="@id/tv_cur_number"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@null"
                android:drawablePadding="@dimen/distance_15"
                android:hint="@string/input_verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/font_content"
                android:textColorHint="@color/font_gray"
                android:textSize="@dimen/font_size_normal" />

            <com.hx.huixing.widget.TimeButton
                android:id="@+id/btn_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:text="@string/get_verify_code"
                android:textColor="@color/content_blue"
                android:textSize="@dimen/font_size_normal" />

        </RelativeLayout>

        <View
            style="@style/line_horizontal_gray_light_style"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/distance_50"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@null"
            android:drawablePadding="@dimen/distance_15"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/font_content"
            android:textColorHint="@color/font_gray"
            android:textSize="@dimen/font_size_normal"/>
        <View
            style="@style/line_horizontal_gray_light_style"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp" />

        <com.android.base.widget.AutoBgButton
            android:id="@+id/btn_modify"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="@dimen/distance_45"
            android:background="@drawable/button_backgroud_blue"
            android:text="@string/modify_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_middle"
            custom:bgAlpha="150"
            custom:bgRadius="3dp"/>

    </LinearLayout>


</LinearLayout>