<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/view_group_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg_default"
    android:orientation="vertical">

    <com.android.base.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/view_line"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/distance_20"
                android:src="@drawable/about_logo" />

            <RelativeLayout
                android:id="@+id/layout_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fore_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="2dp"
                    android:text="+86"
                    android:textSize="@dimen/font_size_normal"/>

                <View
                    android:id="@+id/view_line"
                    android:layout_width="1px"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/tv_fore_title"
                    android:background="@color/line_grey_light"/>

                <com.hx.huixing.widget.ContainsEmojiEditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_toRightOf="@id/view_line"
                    android:background="@null"
                    android:hint="@string/input_num"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingLeft="2dp"
                    android:textColor="@color/font_content"
                    android:textColorHint="@color/font_gray"
                    android:textSize="@dimen/font_size_normal"/>
            </RelativeLayout>

            <View
                style="@style/line_horizontal_gray_light_style"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:gravity="center_vertical">

                <com.hx.huixing.widget.ContainsEmojiEditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@null"
                    android:drawablePadding="@dimen/distance_15"
                    android:hint="@string/please_input_password"
                    android:inputType="numberPassword"
                    android:digits="@string/text_id_card_digits"
                    android:maxLines="1"
                    android:textColor="@color/font_content"
                    android:textColorHint="@color/font_gray"
                    android:textSize="@dimen/font_size_normal"/>

                <ToggleButton
                    android:id="@+id/btn_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/selector_toggle"
                    android:textOff="@null"
                    android:textOn="@null"/>

            </RelativeLayout>

            <View
                style="@style/line_horizontal_gray_light_style"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btn_forget"
                android:background="@null"
                android:text="@string/forget_pwd"
                android:textColor="@color/font_black"
                android:layout_marginTop="8dp"
                android:layout_gravity="right"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/font_size_little"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.android.base.widget.AutoBgButton
                android:id="@+id/btn_login"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_backgroud_blue"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_middle"
                custom:bgAlpha="150"
                custom:bgRadius="3dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>